@@ -20,11 +20,12 @@ import org.springframework.scheduling.quartz.QuartzJobBean;
 /** POC task for testing purposes. */
 @DisallowConcurrentExecution
 @PersistJobDataAfterExecution
-public class PocTask extends QuartzJobBean {
+public class PocTask extends QuartzJobBean implements Task {
   private static final Logger logger =
       LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private String foo;
+  private String description;
 
   @Override
   protected void executeInternal(@NonNull JobExecutionContext context) {
@@ -52,18 +53,22 @@ public class PocTask extends QuartzJobBean {
         logger.debug("Working for {} ms", workingTime);
         Thread.sleep(workingTime);
         logger.debug("POC task is at {}%", i);
-        context.setResult(String.format("POC task is at %d%%", i));
+        context.setResult("POC task is at %d%%".formatted(i));
       }
     } catch (InterruptedException e) {
       logger.error("Thread interrupted", e);
     }
 
-    jobDataMap.put("executions", (1 + (int) mergedJobDataMap.getOrDefault("executions", 0)));
+    int executions = (1 + (int) mergedJobDataMap.getOrDefault("executions", 0));
+    jobDataMap.put("executions", executions);
     jobDataMap.put("lastExecutionFinished", Instant.now());
     jobDataMap.put("lastResult", "POC task executed successfully");
     context.setResult("POC task executed successfully");
+
+    setFoo("foo executed: " + executions);
   }
 
+  // <editor-fold desc="Getters and Setters">
   public String getFoo() {
     return foo;
   }
@@ -71,4 +76,20 @@ public class PocTask extends QuartzJobBean {
   public void setFoo(String foo) {
     this.foo = foo;
   }
+
+  @Override
+  public TaskType getType() {
+    return TaskType.POC;
+  }
+
+  @Override
+  public String getDescription() {
+    return description;
+  }
+
+  @Override
+  public void setDescription(String description) {
+    this.description = description;
+  }
+  // </editor-fold>
 }
